--- a/src/main/resources/templates/controller.java.vm
+++ b/src/main/resources/templates/controller.java.vm
@@ -1,6 +1,7 @@
 package ${package.Controller};
 
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
+import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import org.springframework.web.bind.annotation.*;
 import javax.annotation.Resource;
 import java.util.List;
@@ -79,7 +80,11 @@ public class ${table.controllerName} {
         // limit第一个参数 = (pageNum - 1) * pageSize
         @GetMapping("/page")
         public Page<${entity}> findPage(@RequestParam Integer pageNum,
-                                        @RequestParam Integer pageSize) {
+                                        @RequestParam Integer pageSize,
+                                        @RequestParam Boolean desc) {
+                QueryWrapper<User> queryWrapper = new QueryWrapper<>();
+                if(desc) queryWrapper.orderByDesc("id"); // 是否根据id排序
+
                 return ${table.entityPath}Service.page(new Page<>(pageNum, pageSize));
         }
 
