--- a/src/main/resources/templates/controller.java.vm
+++ b/src/main/resources/templates/controller.java.vm
@@ -5,6 +5,7 @@ import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import org.springframework.web.bind.annotation.*;
 import javax.annotation.Resource;
 import java.util.List;
+import com.example.demo.common.Result;
 
 import $!{package.Service}.$!{table.serviceName};
 import ${package.Entity}.${entity};
@@ -48,44 +49,44 @@ public class ${table.controllerName} {
 
         // 新增或者更新
         @PostMapping
-        public Boolean save(@RequestBody ${entity} ${table.entityPath}) {
-                return ${table.entityPath}Service.saveOrUpdate(${table.entityPath});
+        public Result save(@RequestBody ${entity} ${table.entityPath}) {
+                return Result.success(${table.entityPath}Service.saveOrUpdate(${table.entityPath}));
         }
 
         // 根据id删除
         @DeleteMapping("/{id}")
-        public Boolean delete(@PathVariable Integer id) {
-                return ${table.entityPath}Service.removeById(id);
+        public Result delete(@PathVariable Integer id) {
+                return Result.success(${table.entityPath}Service.removeById(id));
         }
 
         // 以id来删除多条数据     数据是 [1, 2, 3] 这样的
         @PostMapping("/del/batch")
-        public Boolean deleteBatch(@RequestBody List<Integer> list) {
-                return ${table.entityPath}Service.removeByIds(list);
+        public Result deleteBatch(@RequestBody List<Integer> list) {
+                return Result.success(${table.entityPath}Service.removeByIds(list));
         }
 
         // 获取所有数据
         @GetMapping
-        public List<${entity}> findAll() {
-                return ${table.entityPath}Service.list();
+        public Result findAll() {
+                return Result.success(${table.entityPath}Service.list());
         }
 
         // 根据id查询数据
         @GetMapping("/{id}")
-        public ${entity} findOne(@PathVariable Integer id) {
-                return ${table.entityPath}Service.getById(id);
+        public Result findOne(@PathVariable Integer id) {
+                return Result.success(${table.entityPath}Service.getById(id));
         }
 
         // 分页查询
         // limit第一个参数 = (pageNum - 1) * pageSize
         @GetMapping("/page")
-        public Page<${entity}> findPage(@RequestParam Integer pageNum,
+        public Result findPage(@RequestParam Integer pageNum,
                                         @RequestParam Integer pageSize,
                                         @RequestParam Boolean desc) {
                 QueryWrapper<${entity}> queryWrapper = new QueryWrapper<>();
                 if(desc) queryWrapper.orderByDesc("id"); // 是否根据id排序
 
-                return ${table.entityPath}Service.page(new Page<>(pageNum, pageSize));
+                return Result.success(${table.entityPath}Service.page(new Page<>(pageNum, pageSize)));
         }
 
 }
