--- a/src/main/resources/templates/controller.java.vm
+++ b/src/main/resources/templates/controller.java.vm
@@ -60,7 +60,7 @@ public class ${table.controllerName} {
         }
 
         // 以id来删除多条数据     数据是 [1, 2, 3] 这样的
-        @PostMapping("/del/batch")
+        @PostMapping("/delete/batch")
         public Result deleteBatch(@RequestBody List<Integer> list) {
                 return Result.success(${table.entityPath}Service.removeByIds(list));
         }
